fixed allowing more than 50 or less than 5 questions also fixed an error in which elements would go offscreen

--- a/src/App.css
+++ b/src/App.css
@@ -84,15 +84,11 @@ cursor:not-allowed;
 }
 /* game  */
 .game{
-  margin-top: 20px;
-  display: flex;
-  padding: 30px;
-  border-radius: 10px;
-  background-color: #F2F2F2;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-
+  width: 90%;
+  max-width: 70vw;
+  height: 90%;
+  max-height: 100vh;
+  overflow: auto;
 }
 .questionText{
   font-family: 'Bubblegum Sans', cursive;
